# Heroes-of-Might-and-Magic-3

./: Archer.cpp  Archer.h  Army.cpp  Army.h  BlackDragon.cpp  BlackDragon.h  CMakeLists.txt  Creature.cpp  Creature.h  GameUnit.cpp  GameUnit.h  Hero.cpp  Hero.h  Necomancer.cpp  Necomancer.h  Necromancer.cpp  Necromancer.h  README.md  Thief.cpp  Thief.h  Vampire.cpp  Vampire.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h  Zombie.cpp  Zombie.h  main.cpp
-std=c++98/: Archer.cpp  Archer.h  Army.cpp  Army.h  BlackDragon.h  CMakeLists.txt  Creature.h  GameUnit.cpp  Hero.cpp  Hero.h  Necromancer.cpp  Thief.cpp  Vampire.cpp  Vampire.h  Warrior.h  Wizard.cpp  Wizard.h  Zombie.cpp  Zombie.h  main.cpp  makefile
-std=c++98/Heros/1/: Details.txt
-std=c++98/Heros/2/: Details.txt
-std=c++98/Heros/3/: Details.txt
-std=c++98/game/: Game_Details.txt  Real_Order.txt
1/: Details.txt
2/: Details.txt
game/: Game_Details.txt  Real_Order.txt
