cmake_minimum_required(VERSION 3.13)
project(ex5_204520803_204520803)

set(CMAKE_CXX_STANDARD 98)

include_directories(.)

add_executable(ex5_204520803_204520803
        Archer.cpp
        Archer.h
        Army.cpp
        Army.h
        BlackDragon.cpp
        BlackDragon.h
        Creature.cpp
        Creature.h
        GameUnit.cpp
        GameUnit.h
        Hero.cpp
        Hero.h
        main.cpp
        Necromancer.cpp
        Necromancer.h
        Thief.cpp
        Thief.h
        Vampire.cpp
        Vampire.h
        Warrior.cpp
        Warrior.h
        Wizard.cpp
        Wizard.h
        Zombie.cpp
        Zombie.h)
